# pokemon-remake-sfml

./: CMakeLists.txt  README.md  button.cpp  button.hpp  character.cpp  character.hpp  data.cmgt  gameObject.hpp  main.cpp  scene.cpp  scene.hpp  sceneHandler.cpp  sceneHandler.hpp  spriteObject.hpp  textObject.hpp
